--- a/projects/android/rent_manager.html
+++ b/projects/android/rent_manager.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/portofoliu/tori_style.css">
+    <link rel="stylesheet" href="../../tori_style.css">
 </head>
 
 <!-- TODO: edit pics with real info (phone, email, etc)-->
@@ -14,14 +14,14 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/portofoliu/index.html">
-            <img src="/portofoliu/media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+          <a class="navbar-brand" href="../../index.html">
+            <img src="../../media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
           <ul class="navbar-nav float-end">
             <li class="nav-item active">
-                <a class="nav-link" href="/portofoliu/projects/projects.html">Projects</a>
+                <a class="nav-link" href="../projects.html">Projects</a>
               </li>
             </ul>
         </div>
@@ -40,63 +40,63 @@
                     <div class="row g-4 d-flex justify-content-center align-items-center" id="thesis_imgs" style="height: 80vh; overflow-y: auto;">
                         <!-- Image 1 -->
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/rm_login.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal1">
+                          <img src="../../media/rm/rm_login.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal1">
                         </div>
                         <!-- Image 2 -->
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/rm_register.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal2">
+                          <img src="../../media/rm/rm_register.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal2">
                         </div>
                         <!-- Image 3 -->
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/home.webp" class="img-fluid rounded rounded-3  shadow" data-bs-toggle="modal" data-bs-target="#modal3">
+                          <img src="../../media/rm/home.webp" class="img-fluid rounded rounded-3  shadow" data-bs-toggle="modal" data-bs-target="#modal3">
                         </div>
                         <!-- Image 4 -->
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/prop_list.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal4">
+                          <img src="../../media/rm/prop_list.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal4">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/filters.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal5">
+                          <img src="../../media/rm/filters.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal5">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/new_prop.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal6">
+                          <img src="../../media/rm/new_prop.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal6">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/prop_info.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal7">
+                          <img src="../../media/rm/prop_info.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal7">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/edt_prop.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal8">
+                          <img src="../../media/rm/edt_prop.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal8">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/con_list.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal9">
+                          <img src="../../media/rm/con_list.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal9">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/new_con.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal10">
+                          <img src="../../media/rm/new_con.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal10">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/con_info.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal11">
+                          <img src="../../media/rm/con_info.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal11">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/edt_con.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal12">
+                          <img src="../../media/rm/edt_con.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal12">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/full_map.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal13">
+                          <img src="../../media/rm/full_map.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal13">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/map.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal14">
+                          <img src="../../media/rm/map.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal14">
                         </div>
 
                         <div class="col-md-3">
-                          <img src="/portofoliu/media/rm/settings.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal15">
+                          <img src="../../media/rm/settings.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal15">
                         </div>
                       </div>
                     </div>
@@ -108,7 +108,7 @@
         <div class="modal-body pb-3">
               <!-- The Close Button -->
               <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/rm_login.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="../../media/rm/rm_login.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -120,7 +120,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/rm_register.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/rm_register.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/home.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/home.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -142,7 +142,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/prop_list.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/prop_list.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -153,7 +153,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/filters.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/filters.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/new_prop.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/new_prop.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -175,7 +175,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/prop_info.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/prop_info.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -186,7 +186,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/edt_prop.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/edt_prop.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -197,7 +197,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/con_list.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/con_list.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -208,7 +208,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/new_con.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/new_con.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -219,7 +219,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/con_info.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/con_info.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -230,7 +230,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/edt_con.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/edt_con.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -241,7 +241,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/full_map.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/full_map.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -252,7 +252,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/map.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/map.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -263,7 +263,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="/portofoliu/media/rm/settings.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
+          <img src="../../media/rm/settings.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;" />
         </div>
       </div>
     </div>
@@ -317,7 +317,7 @@
           <div class="col-md-4 align-content-center">
               <div class="container p-2 bg-secondary text-light border border-3" style="font-size: 10px; text-align: justify;">
                   <p>All design, images, and content were created by me, except for the animated header, originally made by Barbara Rodriguez on <a href="https://codepen.io/baarbaracrr/pen/KKovmGb" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">CodePen</a>. Many thanks to her for the inspiration and work!</p>
-                  <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="/projects/web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
+                  <p class="m-0">Some visual assets used in my CodePen projects (linked <a href="../web/web.html" style="color: rgb(108, 198, 250); text-decoration: none; font-style: italic;">here</a>) were sourced from various online platforms. I do not claim ownership of those images, and credits go to their respective creators. Each project includes a disclaimer when applicable.</p>
               </div>
           </div>
       </div>
