--- a/projects/thesis.html
+++ b/projects/thesis.html
@@ -6,14 +6,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/portofoliu/tori_style.css">
+    <link rel="stylesheet" href="../tori_style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top shadow-lg border-bottom">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img src="media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
+            <img src="../media/logo.webp" alt="Avatar Logo" style="width:50px;" class="rounded-pill mx-3 border border-2 border-light"> 
             Salagean Lorena
           </a>
 
@@ -38,27 +38,27 @@
                     <div class="row g-4 d-flex justify-content-center align-items-center" id="thesis_imgs" style="height: 80vh; overflow-y: auto;">
                         <!-- Image 1 -->
                         <div class="col-md-6">
-                          <img src="media/thesis/macheta.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal1">
+                          <img src="../media/thesis/macheta.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal1">
                         </div>
                         <!-- Image 2 -->
                         <div class="col-md-6">
-                          <img src="media/thesis/steps.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal2">
+                          <img src="../media/thesis/steps.webp" class="img-fluid rounded rounded-3 shadow" data-bs-toggle="modal" data-bs-target="#modal2">
                         </div>
                         <!-- Image 3 -->
                         <div class="col-md-12">
-                          <img src="media/thesis/parkcam.webp" class="img-fluid shadow" data-bs-toggle="modal" data-bs-target="#modal3">
+                          <img src="../media/thesis/parkcam.webp" class="img-fluid shadow" data-bs-toggle="modal" data-bs-target="#modal3">
                         </div>
                         <!-- Image 4 -->
                         <div class="col-md-4">
-                          <img src="media/finddrive/login.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal4" style="height: 60vh;">
+                          <img src="../media/finddrive/login.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal4" style="height: 60vh;">
                         </div>
                         <!-- Image 5 -->
                         <div class="col-md-4">
-                          <img src="media/finddrive/home.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal5" style="height: 60vh;">
+                          <img src="../media/finddrive/home.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal5" style="height: 60vh;">
                         </div>
                         <!-- Image 6 -->
                         <div class="col-md-4">
-                          <img src="media/finddrive/profile.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal6" style="height: 60vh;">
+                          <img src="../media/finddrive/profile.webp" class="img-fluid shadow mx-auto d-block rounded rounded-3" data-bs-toggle="modal" data-bs-target="#modal6" style="height: 60vh;">
                         </div>
                       </div>
                     </div>
@@ -71,7 +71,7 @@
         <div class="modal-body pb-3">
               <!-- The Close Button -->
               <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="media/thesis/macheta.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="../media/thesis/macheta.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="media/thesis/steps.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="../media/thesis/steps.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="media/thesis/parkcam.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="../media/thesis/parkcam.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="media/finddrive/login.webp"class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="../media/finddrive/login.webp"class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -116,7 +116,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="media/finddrive/home.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="../media/finddrive/home.webp" class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
       <div class="modal-content bg-dark">
         <div class="modal-body pb-3">
             <button type="button" class="btn" data-bs-dismiss="modal"><i class="bi bi-x-circle"></i></button>
-          <img src="media/finddrive/profile.webp"class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
+          <img src="../media/finddrive/profile.webp"class="img-fluid d-block mx-auto shadow" style="max-width: 90%; height: auto;"/>
         </div>
       </div>
     </div>
